--- a/clock.html
+++ b/clock.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Главное: Повот элементов, получая из с помощью js; про контейнеры, 
+    я приблизился к пониманию как использовать контейнеры.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
